Package_Tools/include-C/Ubuntu_26.04/gstreamer-1.0/gst/zzzz_in_arbeit/h/gsttaglist.h


typedef enum {
  GST_TAG_MERGE_UNDEFINED,
  GST_TAG_MERGE_REPLACE_ALL,
  GST_TAG_MERGE_REPLACE,
  GST_TAG_MERGE_APPEND,
  GST_TAG_MERGE_PREPEND,
  GST_TAG_MERGE_KEEP,
  GST_TAG_MERGE_KEEP_ALL,
  GST_TAG_MERGE_COUNT
} GstTagMergeMode;
typedef struct _GstTagList GstTagList;
typedef void (*GstTagForeachFunc) (const GstTagList * list,
                                   const gchar      * tag,
                                   gpointer           user_data);
typedef enum {
  GST_TAG_SCOPE_STREAM,
  GST_TAG_SCOPE_GLOBAL
} GstTagScope;
extern
GstTagList * gst_tag_list_new_empty         (void)  ;
extern
GstTagList * gst_tag_list_new               (const gchar * tag, ...)   ;
extern
GstTagList * gst_tag_list_new_valist        (va_list var_args)  ;
extern
void         gst_tag_list_set_scope         (GstTagList * list, GstTagScope scope);
extern
GstTagScope  gst_tag_list_get_scope         (const GstTagList * list);
extern
gchar      * gst_tag_list_to_string         (const GstTagList * list)  ;
extern
GstTagList * gst_tag_list_new_from_string   (const gchar      * str)  ;
extern
gint         gst_tag_list_n_tags            (const GstTagList * list);
extern
const gchar* gst_tag_list_nth_tag_name      (const GstTagList * list, guint index);
extern
gboolean     gst_tag_list_is_empty          (const GstTagList * list);
extern
gboolean     gst_tag_list_is_equal          (const GstTagList * list1,
                                             const GstTagList * list2);
extern
void         gst_tag_list_insert            (GstTagList       * into,
                                             const GstTagList * from,
                                             GstTagMergeMode    mode);
extern
GstTagList * gst_tag_list_merge             (const GstTagList * list1,
                                             const GstTagList * list2,
                                             GstTagMergeMode    mode)  ;
extern
guint        gst_tag_list_get_tag_size      (const GstTagList * list,
                                             const gchar      * tag);
extern
void         gst_tag_list_add               (GstTagList       * list,
                                             GstTagMergeMode    mode,
                                             const gchar      * tag,
                                             ...) ;
extern
void         gst_tag_list_add_values        (GstTagList       * list,
                                             GstTagMergeMode    mode,
                                             const gchar      * tag,
                                             ...) ;
extern
void         gst_tag_list_add_valist        (GstTagList       * list,
                                             GstTagMergeMode    mode,
                                             const gchar      * tag,
                                             va_list        var_args);
extern
void         gst_tag_list_add_valist_values (GstTagList       * list,
                                             GstTagMergeMode    mode,
                                             const gchar      * tag,
                                             va_list            var_args);
extern
void         gst_tag_list_add_value         (GstTagList       * list,
                                             GstTagMergeMode    mode,
                                             const gchar      * tag,
                                             const GValue     * value);
extern
void         gst_tag_list_remove_tag        (GstTagList       * list,
                                             const gchar      * tag);
extern
void         gst_tag_list_foreach           (const GstTagList * list,
                                             GstTagForeachFunc  func,
                                             gpointer           user_data);
extern
const GValue *
             gst_tag_list_get_value_index   (const GstTagList * list,
                                             const gchar      * tag,
                                             guint              index);
extern
gboolean     gst_tag_list_copy_value        (GValue           * dest,
                                             const GstTagList * list,
                                             const gchar      * tag);
extern
gboolean     gst_tag_list_get_boolean       (const GstTagList * list,
                                             const gchar      * tag,
                                             gboolean         * value);
extern
gboolean     gst_tag_list_get_boolean_index (const GstTagList * list,
                                             const gchar      * tag,
                                             guint              index,
                                             gboolean         * value);
extern
gboolean     gst_tag_list_get_int           (const GstTagList * list,
                                             const gchar      * tag,
                                             gint             * value);
extern
gboolean     gst_tag_list_get_int_index     (const GstTagList * list,
                                             const gchar      * tag,
                                             guint              index,
                                             gint             * value);
extern
gboolean     gst_tag_list_get_uint          (const GstTagList * list,
                                             const gchar      * tag,
                                             guint            * value);
extern
gboolean     gst_tag_list_get_uint_index    (const GstTagList * list,
                                             const gchar      * tag,
                                             guint              index,
                                             guint            * value);
extern
gboolean     gst_tag_list_get_int64         (const GstTagList * list,
                                             const gchar      * tag,
                                             gint64           * value);
extern
gboolean     gst_tag_list_get_int64_index   (const GstTagList * list,
                                             const gchar      * tag,
                                             guint              index,
                                             gint64           * value);
extern
gboolean     gst_tag_list_get_uint64        (const GstTagList * list,
                                             const gchar      * tag,
                                             guint64          * value);
extern
gboolean     gst_tag_list_get_uint64_index  (const GstTagList * list,
                                             const gchar      * tag,
                                             guint              index,
                                             guint64          * value);
extern
gboolean     gst_tag_list_get_float         (const GstTagList * list,
                                             const gchar      * tag,
                                             gfloat           * value);
extern
gboolean     gst_tag_list_get_float_index   (const GstTagList * list,
                                             const gchar      * tag,
                                             guint              index,
                                             gfloat           * value);
extern
gboolean     gst_tag_list_get_double        (const GstTagList * list,
                                             const gchar      * tag,
                                             gdouble          * value);
extern
gboolean     gst_tag_list_get_double_index  (const GstTagList * list,
                                             const gchar      * tag,
                                             guint              index,
                                             gdouble          * value);
extern
gboolean     gst_tag_list_get_string        (const GstTagList * list,
                                             const gchar      * tag,
                                             gchar           ** value);
extern
gboolean     gst_tag_list_get_string_index  (const GstTagList * list,
                                             const gchar      * tag,
                                             guint              index,
                                             gchar           ** value);
extern
gboolean     gst_tag_list_peek_string_index (const GstTagList * list,
                                             const gchar      * tag,
                                             guint              index,
                                             const gchar     ** value);
extern
gboolean     gst_tag_list_get_pointer       (const GstTagList * list,
                                             const gchar      * tag,
                                             gpointer         * value);
extern
gboolean     gst_tag_list_get_pointer_index (const GstTagList * list,
                                             const gchar      * tag,
                                             guint              index,
                                             gpointer         * value);
extern
gboolean     gst_tag_list_get_date          (const GstTagList * list,
                                             const gchar      * tag,
                                             GDate           ** value);
extern
gboolean     gst_tag_list_get_date_index    (const GstTagList * list,
                                             const gchar      * tag,
                                             guint              index,
                                             GDate           ** value);
extern
gboolean     gst_tag_list_get_date_time     (const GstTagList * list,
                                             const gchar      * tag,
                                             GstDateTime     ** value);
extern
gboolean     gst_tag_list_get_date_time_index (const GstTagList * list,
                                             const gchar      * tag,
                                             guint              index,
                                             GstDateTime     ** value);
extern
gboolean     gst_tag_list_get_sample        (const GstTagList * list,
                                             const gchar      * tag,
                                             GstSample       ** sample);
extern
gboolean     gst_tag_list_get_sample_index  (const GstTagList * list,
                                             const gchar      * tag,
                                             guint              index,
                                             GstSample       ** sample);
extern
GstTagList *  gst_tag_list_ref   (GstTagList * taglist);
extern
void          gst_tag_list_unref (GstTagList * taglist);
extern
void          gst_clear_tag_list (GstTagList ** taglist_ptr);
extern
GstTagList*   gst_tag_list_copy  (const GstTagList* taglist) ;
extern
gboolean      gst_tag_list_replace (GstTagList ** old_taglist,
                                    GstTagList * new_taglist);
extern
gboolean      gst_tag_list_take    (GstTagList ** old_taglist,
                                    GstTagList * new_taglist);
extern
GstTagList * gst_tag_list_make_writable (GstTagList * taglist) ;
extern
gboolean     gst_tag_list_is_writable   (const GstTagList * taglist);
#define GST_TAG_TITLE                  "title"
#define GST_TAG_TITLE_SORTNAME         "title-sortname"
#define GST_TAG_ARTIST                 "artist"
#define GST_TAG_ARTIST_SORTNAME        "artist-sortname"
#define GST_TAG_ALBUM                  "album"
#define GST_TAG_ALBUM_SORTNAME         "album-sortname"
#define GST_TAG_ALBUM_ARTIST           "album-artist"
#define GST_TAG_ALBUM_ARTIST_SORTNAME  "album-artist-sortname"
#define GST_TAG_COMPOSER               "composer"
#define GST_TAG_CONDUCTOR               "conductor"
#define GST_TAG_DATE                   "date"
#define GST_TAG_DATE_TIME              "datetime"
#define GST_TAG_GENRE                  "genre"
#define GST_TAG_COMMENT                "comment"
#define GST_TAG_EXTENDED_COMMENT       "extended-comment"
#define GST_TAG_TRACK_NUMBER           "track-number"
#define GST_TAG_TRACK_COUNT            "track-count"
#define GST_TAG_ALBUM_VOLUME_NUMBER    "album-disc-number"
#define GST_TAG_ALBUM_VOLUME_COUNT    "album-disc-count"
#define GST_TAG_LOCATION               "location"