Package_Tools/include-C/Ubuntu_26.04/gstreamer-1.0/gst/zzzz_in_arbeit/pp/gsttaglist.pp


function gst_tag_list_new_empty:PGstTagList;cdecl;external;
(* Const before type ignored *)
function gst_tag_list_new(tag:Pgchar; args:array of const):PGstTagList;cdecl;external;
function gst_tag_list_new(tag:Pgchar):PGstTagList;cdecl;external;
function gst_tag_list_new_valist(var_args:Tva_list):PGstTagList;cdecl;external;
procedure gst_tag_list_set_scope(list:PGstTagList; scope:TGstTagScope);cdecl;external;
(* Const before type ignored *)
function gst_tag_list_get_scope(list:PGstTagList):TGstTagScope;cdecl;external;
(* Const before type ignored *)
function gst_tag_list_to_string(list:PGstTagList):Pgchar;cdecl;external;
(* Const before type ignored *)
function gst_tag_list_new_from_string(str:Pgchar):PGstTagList;cdecl;external;
(* Const before type ignored *)
function gst_tag_list_n_tags(list:PGstTagList):Tgint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_tag_list_nth_tag_name(list:PGstTagList; index:Tguint):Pgchar;cdecl;external;
(* Const before type ignored *)
function gst_tag_list_is_empty(list:PGstTagList):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_tag_list_is_equal(list1:PGstTagList; list2:PGstTagList):Tgboolean;cdecl;external;
(* Const before type ignored *)
procedure gst_tag_list_insert(into:PGstTagList; from:PGstTagList; mode:TGstTagMergeMode);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_tag_list_merge(list1:PGstTagList; list2:PGstTagList; mode:TGstTagMergeMode):PGstTagList;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_tag_list_get_tag_size(list:PGstTagList; tag:Pgchar):Tguint;cdecl;external;
(* Const before type ignored *)
procedure gst_tag_list_add(list:PGstTagList; mode:TGstTagMergeMode; tag:Pgchar; args:array of const);cdecl;external;
procedure gst_tag_list_add(list:PGstTagList; mode:TGstTagMergeMode; tag:Pgchar);cdecl;external;
(* Const before type ignored *)
procedure gst_tag_list_add_values(list:PGstTagList; mode:TGstTagMergeMode; tag:Pgchar; args:array of const);cdecl;external;
procedure gst_tag_list_add_values(list:PGstTagList; mode:TGstTagMergeMode; tag:Pgchar);cdecl;external;
(* Const before type ignored *)
procedure gst_tag_list_add_valist(list:PGstTagList; mode:TGstTagMergeMode; tag:Pgchar; var_args:Tva_list);cdecl;external;
(* Const before type ignored *)
procedure gst_tag_list_add_valist_values(list:PGstTagList; mode:TGstTagMergeMode; tag:Pgchar; var_args:Tva_list);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure gst_tag_list_add_value(list:PGstTagList; mode:TGstTagMergeMode; tag:Pgchar; value:PGValue);cdecl;external;
(* Const before type ignored *)
procedure gst_tag_list_remove_tag(list:PGstTagList; tag:Pgchar);cdecl;external;
(* Const before type ignored *)
procedure gst_tag_list_foreach(list:PGstTagList; func:TGstTagForeachFunc; user_data:Tgpointer);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gst_tag_list_get_value_index(list:PGstTagList; tag:Pgchar; index:Tguint):PGValue;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_tag_list_copy_value(dest:PGValue; list:PGstTagList; tag:Pgchar):Tgboolean;cdecl;external;
{ simplifications (FIXME: do we want them?)  }
(* Const before type ignored *)
(* Const before type ignored *)
function gst_tag_list_get_boolean(list:PGstTagList; tag:Pgchar; value:Pgboolean):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_tag_list_get_boolean_index(list:PGstTagList; tag:Pgchar; index:Tguint; value:Pgboolean):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_tag_list_get_int(list:PGstTagList; tag:Pgchar; value:Pgint):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_tag_list_get_int_index(list:PGstTagList; tag:Pgchar; index:Tguint; value:Pgint):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_tag_list_get_uint(list:PGstTagList; tag:Pgchar; value:Pguint):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_tag_list_get_uint_index(list:PGstTagList; tag:Pgchar; index:Tguint; value:Pguint):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_tag_list_get_int64(list:PGstTagList; tag:Pgchar; value:Pgint64):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_tag_list_get_int64_index(list:PGstTagList; tag:Pgchar; index:Tguint; value:Pgint64):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_tag_list_get_uint64(list:PGstTagList; tag:Pgchar; value:Pguint64):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_tag_list_get_uint64_index(list:PGstTagList; tag:Pgchar; index:Tguint; value:Pguint64):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_tag_list_get_float(list:PGstTagList; tag:Pgchar; value:Pgfloat):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_tag_list_get_float_index(list:PGstTagList; tag:Pgchar; index:Tguint; value:Pgfloat):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_tag_list_get_double(list:PGstTagList; tag:Pgchar; value:Pgdouble):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_tag_list_get_double_index(list:PGstTagList; tag:Pgchar; index:Tguint; value:Pgdouble):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_tag_list_get_string(list:PGstTagList; tag:Pgchar; value:PPgchar):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_tag_list_get_string_index(list:PGstTagList; tag:Pgchar; index:Tguint; value:PPgchar):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gst_tag_list_peek_string_index(list:PGstTagList; tag:Pgchar; index:Tguint; value:PPgchar):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_tag_list_get_pointer(list:PGstTagList; tag:Pgchar; value:Pgpointer):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_tag_list_get_pointer_index(list:PGstTagList; tag:Pgchar; index:Tguint; value:Pgpointer):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_tag_list_get_date(list:PGstTagList; tag:Pgchar; value:PPGDate):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_tag_list_get_date_index(list:PGstTagList; tag:Pgchar; index:Tguint; value:PPGDate):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_tag_list_get_date_time(list:PGstTagList; tag:Pgchar; value:PPGstDateTime):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_tag_list_get_date_time_index(list:PGstTagList; tag:Pgchar; index:Tguint; value:PPGstDateTime):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_tag_list_get_sample(list:PGstTagList; tag:Pgchar; sample:PPGstSample):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gst_tag_list_get_sample_index(list:PGstTagList; tag:Pgchar; index:Tguint; sample:PPGstSample):Tgboolean;cdecl;external;
function gst_tag_list_ref(taglist:PGstTagList):PGstTagList;cdecl;external;
procedure gst_tag_list_unref(taglist:PGstTagList);cdecl;external;
procedure gst_clear_tag_list(taglist_ptr:PPGstTagList);cdecl;external;
(* Const before type ignored *)
function gst_tag_list_copy(taglist:PGstTagList):PGstTagList;cdecl;external;
function gst_tag_list_replace(old_taglist:PPGstTagList; new_taglist:PGstTagList):Tgboolean;cdecl;external;
function gst_tag_list_take(old_taglist:PPGstTagList; new_taglist:PGstTagList):Tgboolean;cdecl;external;
function gst_tag_list_make_writable(taglist:PGstTagList):PGstTagList;cdecl;external;
(* Const before type ignored *)
function gst_tag_list_is_writable(taglist:PGstTagList):Tgboolean;cdecl;external;
{ GStreamer core tags  }
{*
 * GST_TAG_TITLE:
 *
 * commonly used title (string)
 *
 * The title as it should be displayed, e.g. 'The Doll House'
  }
const
  GST_TAG_TITLE = 'title';  
{*
 * GST_TAG_TITLE_SORTNAME:
 *
 * commonly used title, as used for sorting (string)
 *
 * The title as it should be sorted, e.g. 'Doll House, The'
  }
  GST_TAG_TITLE_SORTNAME = 'title-sortname';  
{*
 * GST_TAG_ARTIST:
 *
 * person(s) responsible for the recording (string)
 *
 * The artist name as it should be displayed, e.g. 'Jimi Hendrix' or
 * 'The Guitar Heroes'
  }
  GST_TAG_ARTIST = 'artist';  
{*
 * GST_TAG_ARTIST_SORTNAME:
 *
 * person(s) responsible for the recording, as used for sorting (string)
 *
 * The artist name as it should be sorted, e.g. 'Hendrix, Jimi' or
 * 'Guitar Heroes, The'
  }
  GST_TAG_ARTIST_SORTNAME = 'artist-sortname';  
{*
 * GST_TAG_ALBUM:
 *
 * album containing this data (string)
 *
 * The album name as it should be displayed, e.g. 'The Jazz Guitar'
  }
  GST_TAG_ALBUM = 'album';  
{*
 * GST_TAG_ALBUM_SORTNAME:
 *
 * album containing this data, as used for sorting (string)
 *
 * The album name as it should be sorted, e.g. 'Jazz Guitar, The'
  }
  GST_TAG_ALBUM_SORTNAME = 'album-sortname';  
{*
 * GST_TAG_ALBUM_ARTIST:
 *
 * The artist of the entire album, as it should be displayed.
  }
  GST_TAG_ALBUM_ARTIST = 'album-artist';  
{*
 * GST_TAG_ALBUM_ARTIST_SORTNAME:
 *
 * The artist of the entire album, as it should be sorted.
  }
  GST_TAG_ALBUM_ARTIST_SORTNAME = 'album-artist-sortname';  
{*
 * GST_TAG_COMPOSER:
 *
 * person(s) who composed the recording (string)
  }
  GST_TAG_COMPOSER = 'composer';  
{*
 * GST_TAG_CONDUCTOR:
 *
 * conductor/performer refinement (string)
 *
 * Since: 1.8
  }
  GST_TAG_CONDUCTOR = 'conductor';  
{*
 * GST_TAG_DATE:
 *
 * date the data was created (#GDate structure)
  }
  GST_TAG_DATE = 'date';  
{*
 * GST_TAG_DATE_TIME:
 *
 * date and time the data was created (#GstDateTime structure)
  }
  GST_TAG_DATE_TIME = 'datetime';  
{*
 * GST_TAG_GENRE:
 *
 * genre this data belongs to (string)
  }
  GST_TAG_GENRE = 'genre';  
{*
 * GST_TAG_COMMENT:
 *
 * free text commenting the data (string)
  }
  GST_TAG_COMMENT = 'comment';  
{*
 * GST_TAG_EXTENDED_COMMENT:
 *
 * key/value text commenting the data (string)
 *
 * Must be in the form of 'key=comment' or
 * 'key[lc]=comment' where 'lc' is an ISO-639
 * language code.
 *
 * This tag is used for unknown Vorbis comment tags,
 * unknown APE tags and certain ID3v2 comment fields.
  }
  GST_TAG_EXTENDED_COMMENT = 'extended-comment';  
{*
 * GST_TAG_TRACK_NUMBER:
 *
 * track number inside a collection (unsigned integer)
  }
  GST_TAG_TRACK_NUMBER = 'track-number';  
{*
 * GST_TAG_TRACK_COUNT:
 *
 * count of tracks inside collection this track belongs to (unsigned integer)
  }
  GST_TAG_TRACK_COUNT = 'track-count';  
{*
 * GST_TAG_ALBUM_VOLUME_NUMBER:
 *
 * disc number inside a collection (unsigned integer)
  }
  GST_TAG_ALBUM_VOLUME_NUMBER = 'album-disc-number';  
{*
 * GST_TAG_ALBUM_VOLUME_COUNT:
 *
 * count of discs inside collection this disc belongs to (unsigned integer)
  }
  GST_TAG_ALBUM_VOLUME_COUNT = 'album-disc-count';  
{*
 * GST_TAG_LOCATION:
 *
 * Origin of media as a URI (location, where the original of the file or stream
 * is hosted) (string)
  }
